Adding needed code.

--- a/fitnessTest.properties
+++ b/fitnessTest.properties
@@ -1,7 +1,8 @@
-#opponents=lwf.MyFirstRobot,lwf.RunawayRobot,sample.Crazy,sample.Walls,sample.SpinBot
-opponents=lwf.NiceCrazy,lwf.NiceCrazy,lwf.NiceCrazy
-numberOfRounds=5
+opponents=lwf.NiceCrazy
+numberOfRounds=2
 #between 400-5000
-battlefieldWidth=500
-battlefieldHeight=500
-inactivityTime=200
+battlefieldWidth=700
+battlefieldHeight=700
+inactivityTime=450
+botcatPropertiesPath=/home/lancewf/robocode_workspace/ScalaRobobot/bin/org/robocode/BotCat.data/BotCat.properties
+botcat2PropertiesPath=/home/lancewf/robocode_workspace/ScalaRobobot/bin/org/robocode/BotCat2.data/BotCat.properties
